# Text-Prediction_component

./: .gitignore  .lightningignore  .pre-commit-config.yaml  README.md  app.py  bench.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-checks.yml  ci-tests.yml  ci.yml  package-checks.yml  pre-commit.yml
lai_charpred/: __init__.py  callbacks.py  configs.py  main.py
lai_textpred/: __init__.py  callbacks.py  configs.py  cost_estimation.py  dataset.py  error.py  moving_average.py  steady_state_utils.py
lai_textpred/callbacks/: __init__.py  monitoring.py  steady_state_detection.py
tests/: conftest.py  helpers.py  requirements.txt  test_app.py  test_callbacks.py  test_configs.py  test_datasets.py  test_error.py  test_moving_average.py
tests/callbacks/: test_monitoring.py  test_steady_state_detection.py
