[metadata]
name = lai-textpred
version = 0.0.1
description = LAI components for training text prediction
long_description = file: README.md
long_description_content_type = text/markdown
author = Lightning-AI
classifiers =
    Programming Language :: Python :: 3
keywords = deep learning, machine learning, pytorch, AI


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    lightning>=1.8.4
    deepspeed==0.7.5
    pynvml
    lightning-gpt==0.1.0
    tensorboardX
    tensorboard
    torch_tb_profiler[s3]

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

[flake8]
ignore = W503,E203,C901,E265,E501,E401
max-line-length = 120
exclude = tests/*
max-complexity = 10
